--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Dama</title>
-    <link rel="stylesheet" href="/Exercicio_Xadrez/style.css">
+    <link rel="stylesheet" href="/dama-project/style.css">
 </head>
 
 <body>
